[bug 1006376] Using PRE tags to support backslash-n for newlines, but adding CSS to cause wrapping of long lines for verbose output.

--- a/widget/logger/src/css/Logger.css
+++ b/widget/logger/src/css/Logger.css
@@ -10,6 +10,15 @@
 .yui-log .yui-log-hd h4 {font-size:107%;}
 /* height is controlled here: default 20em*/
 .yui-log .yui-log-bd {width:100%;height:20em;background-color:#FFF;border:1px solid gray;overflow:auto;}
+/* for pre to respect newlines yet wrap long lines */
+/* http://www.longren.org/2006/09/27/wrapping-text-inside-pre-tags/ */
+.yui-log pre.yui-log-verbose {
+    white-space: pre-wrap; /* css-3 */
+    white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */
+    white-space: -o-pre-wrap; /* Opera 7 */
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
 .yui-log .yui-log-ft {margin-top:.5em;margin-bottom:1em;}
 .yui-log .yui-log-ft .yui-log-categoryfilters {}
 .yui-log .yui-log-ft .yui-log-sourcefilters {width:100%;border-top:1px solid #575757;margin-top:.75em;padding-top:.75em;}
